# wasm-limit-size-filter

./: .bazeliskrc  .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  Dockerfile.test  Makefile  README.md  build.rs  go.mod  go.sum  oras.sh  runtime-config.json
ci/: Dockerfile  build.sh  test.sh
src/: config.rs  filter.rs  lib.rs  log.rs  thislog.rs
src/filter/: http_context.rs  root_context.rs
src/util/: serde.rs
test/: check.go  inventory.go  suite_test.go
test/testdata/: server_filter.yaml.tmpl
test/testdata/cluster/: static_server.yaml.tmpl
tests/: suite_test.go
tests/testdata/: server_filter.yaml.tmpl
tests/testdata/listener/: staticreply.yaml.tmpl
