[package]
name = "add-header-rs"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
proxy-wasm = "0.1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
