[package]
name = "limit-size-rs"
version = "0.2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-wasm = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"

[lib]
crate-type = ["cdylib"]
# rlib included to be able to use #[test] without compiler and linker issues
#crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = true # for wasm-snip to remove panicking infra
lto = true
codegen-units = 3
panic = "unwind"

